# NeoRust

./: .gitignore  .windsurfrules  CHANGELOG.md  COPYRIGHT  Cargo.minimal.toml  Cargo.toml  Dockerfile  Makefile.sgx  README.md  SGX_SETUP.md  WALLET_FEATURES.md  build.rs  features_status.md  fix_imports.sh  rust-toolchain.toml  status.md  test_wallet.sh  test_wallet_feature.sh  todo.txt  update_examples.sh  wallet_test.rs
crates/constants/: Cargo.toml  README.md
crates/constants/src/: mod.rs
crates/neo-builder/: Cargo.toml  README.md
crates/neo-builder/src/: error.rs  lib.rs  utils.rs
crates/neo-builder/src/script/: interop_service.rs  mod.rs  script_builder.rs  script_reader.rs
crates/neo-clients/: Cargo.toml  README.md
crates/neo-clients/src/: api_trait.rs  error_adapter.rs  error_conversion_impl.rs  errors.rs  lib.rs  mock_client.rs  mod.rs  models.rs  nep17_provider_impl.rs  utils.rs
crates/neo-codec/: Cargo.toml  README.md
crates/neo-codec/src/: binary_decoder.rs  binary_encoder.rs  constants.rs  encode.rs  error.rs  lib.rs  opcode.rs
crates/neo-common/: Cargo.toml  README.md
crates/neo-common/src/: account_signer.rs  address_conversion.rs  address_or_scripthash_utils.rs  address_utils.rs  base64.rs  base64_encode.rs  base64_utils.rs  block_modes.rs  contract_parameter_type.rs  crypto_adapter.rs  crypto_utils.rs  error_adapter.rs  error_conversion.rs  h160_utils.rs  h256_utils.rs  h256_vec_utils.rs  hard_forks.rs  hard_forks_utils.rs  hashable.rs  invocation_script.rs  lib.rs  nep17_provider.rs  oracle_response_code.rs  provider_error.rs  public_key_utils.rs  role.rs  rpc_client_trait.rs  rpc_types.rs  script_hash_utils.rs  serde_utils.rs  transaction_attribute.rs  transaction_signer.rs  transaction_types.rs  vec_utils.rs  verification_script.rs  wallet.rs  witness.rs  witness_rule.rs  witness_scope.rs
crates/neo-config/: Cargo.toml  README.md
crates/neo-config/src/: constant.rs  lib.rs
crates/neo-contract/: Cargo.toml  README.md
crates/neo-contract/src/: contract_error.rs  contract_management.rs  fungible_token_contract.rs  gas_token.rs  iterator.rs  lib.rs  name_service.rs  neo_token.rs  neo_uri.rs  nft_contract.rs  policy_contract.rs  role_management.rs  tests.rs
crates/neo-crypto/: Cargo.toml  README.md
crates/neo-crypto/src/: base58_helper.rs  crypto_adapter_impl.rs  error.rs  hash.rs  hashable.rs  key_pair.rs  keys.rs  lib.rs  mod.rs  utils.rs  wif.rs
crates/neo-error/: Cargo.toml  README.md
crates/neo-error/src/: builder_error.rs  codec_error.rs  contract_error.rs  crypto_error.rs  lib.rs  lib.rs.bak  nep2_error.rs  provider_error.rs  sign_error.rs  transaction_error.rs  type_error.rs
crates/neo-fs/: Cargo.toml  README.md
crates/neo-fs/src/: acl.rs  client.rs  container.rs  error.rs  lib.rs  mod.rs  object.rs  reference_data.md
crates/neo-protocol/: Cargo.toml  README.md
crates/neo-protocol/src/: account.rs  lib.rs  mod.rs  nep2.rs  protocol_error.rs  role.rs  vm_state.rs
crates/neo-types/: Cargo.toml  README.md
crates/neo-types/src/: address.rs  address_or_scripthash.rs  address_or_scripthash_impl.rs  base64_utils.rs  block.rs  bytes.rs  error.rs  lib.rs  mod.rs  op_code.rs  opcode.rs  script_hash.rs  script_hash_extension.rs  script_hash_impl.rs  serde_utils.rs  serde_value.rs  serde_with_utils.rs  stack_item.rs  string.rs  string_ext.rs  syncing.rs  tx_pool.rs  url_session.rs  util.rs
crates/neo-utils/: Cargo.toml  README.md
crates/neo-utils/src/: error.rs  lib.rs  mod.rs
crates/neo-wallets/: Cargo.toml  README.md
crates/neo-wallets/src/: error.rs  ledger.rs  lib.rs  mod.rs  test_hash.rs  wallet_signer.rs  wallet_trait.rs  yubi.rs
crates/neo-x/: Cargo.toml  README.md
crates/neo-x/src/: lib.rs  mod.rs
crates/neo3/: Cargo.toml
examples/big-numbers/: Cargo.toml
examples/big-numbers/examples/: comparison_equivalence.rs  conversion.rs  create_instances.rs  math_operations.rs
examples/neo_contracts/: Cargo.toml
examples/neo_contracts/examples/: deploy_neo_contract.rs
examples/neo_famous_contracts/: Cargo.toml
examples/neo_famous_contracts/examples/: flamingo_finance.rs  grandshare.rs  neoburger_neo.rs  neocompound.rs  query_gas.rs  query_neo.rs
examples/neo_fs/: Cargo.toml  README.md  basic_usage.rs  mod.rs  multipart_upload.rs
examples/neo_nep17_tokens/: Cargo.toml
examples/neo_nep17_tokens/examples/: nep17_token_operations.rs
examples/neo_nodes/: Cargo.toml
examples/neo_nodes/examples/: block_explorer.rs  connect_to_node.rs
examples/neo_smart_contracts/: Cargo.toml
examples/neo_smart_contracts/examples/: interact_with_contract.rs
examples/neo_transactions/: Cargo.toml
examples/neo_transactions/examples/: create_and_send_transaction.rs
examples/neo_wallets/: Cargo.toml
examples/neo_wallets/examples/: wallet_management.rs
examples/neo_x/: Cargo.toml
examples/neo_x/examples/: neo_x_bridge.rs  neo_x_evm.rs
examples/neo_x/src/: main.rs
examples/providers/: Cargo.toml
examples/providers/examples/: custom.rs  http.rs  http_jwt.rs  ipc.rs  mock.rs  retry.rs  rw.rs  ws.rs
neo-cli/: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  TEST_COMMANDS.md  USAGE_EXAMPLES.md
neo-cli/.cargo/: config.toml
neo-cli/docs/: defi.md  defi_commands.md  famous_contracts.md  implementation_summary.md  neofs_guide.md
neo-cli/src/: errors.rs  main.rs  utils_core.rs
neo-cli/src/commands/: blockchain.rs  contract.rs  defi.rs  defi.rs.bak  fs.rs  mod.rs  neofs.rs  neox.rs  network.rs  storage.rs  wallet.rs
neo-cli/src/config/: mod.rs
neo-cli/src/constants/: contracts.rs  mod.rs  tokens.rs
neo-cli/src/utils/: config.rs  error.rs  extensions.rs  ledger.rs  mod.rs  mod.rs.bak  neofs.rs
neo-cli/tests/: README.md  integration_tests.rs
neo-cli/tests/integration/: blockchain_tests.rs  contract_tests.rs  defi_tests.rs  fs_tests.rs  init_tests.rs  mod.rs  network_tests.rs  utils.rs  wallet_tests.rs
neo-providers/: Cargo.toml
neo-providers/src/: errors.rs  lib.rs  utils.rs
neo-providers/src/core/: account.rs  mod.rs  nep2.rs  wallet.rs
neo-providers/tests/: provider.rs  txpool.rs
(+803 files in other folders)
