[package]
name = "neo3"
version = "0.1.3"
edition = "2021"
authors = ["Neo Global Development Seattle <contact@ngdenterprise.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/R3E-Network/NeoRust"
homepage = "https://github.com/R3E-Network/NeoRust"
description = """
Rust SDK for Neo N3 blockchain
"""
keywords = ["neo", "blockchain", "sdk", "crypto"]
categories = ["cryptography", "api-bindings"]

[dependencies]
# Core dependencies
primitive-types = { version = "0.13.0", default-features = false, features = ["std", "serde"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }

# Optional dependencies with features
bs58 = { version = "0.5.0", optional = true }
base64 = { version = "0.21.0", optional = true }
rustc-hex = { version = "2.1.0", optional = true }
rustc-serialize = { version = "0.3.24", optional = true }
byte-slice-cast = { version = "1.2.2", optional = true }
rand = { version = "0.8.5", optional = true }
thiserror = { version = "1.0.56", optional = true }
chrono = { version = "0.4.34", optional = true }
serde_json = { version = "1.0", features = ["raw_value"], optional = true }
serde_with = { version = "3.6.1", optional = true }

# Crypto dependencies
sha2 = { version = "0.10.8", optional = true }
ripemd = { version = "0.1.3", optional = true }
digest = { version = "0.10.7", optional = true }
hmac = { version = "0.12.1", optional = true }
p256 = { version = "0.13.2", features = ["ecdsa"], optional = true }
elliptic-curve = { version = "0.13.8", optional = true }
rand_core = { version = "0.6.4", optional = true }
signature = { version = "2.2.0", optional = true }

# Optional dependencies
num_enum = { version = "0.7.2", optional = true }
strum = { version = "0.26.1", optional = true }
strum_macros = { version = "0.26.1", optional = true }
getset = { version = "0.1.2", optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true }

[features]
default = ["std", "crypto-standard", "utils", "serde-support", "contract", "neo-fs", "neo-utils", "tokio-support", "transaction", "wallet"]
std = []

# Core feature groups
crypto-standard = [
    "sha2", "ripemd", "digest", "rand", "hmac", 
    "p256", "elliptic-curve", "rand_core", "signature",
    "bs58", "dep:rustc-serialize"
]
utils = ["base64", "bs58", "rustc-hex", "dep:rustc-serialize", "byte-slice-cast"]
serde-support = ["serde_json", "chrono", "serde_with"]

# Optional features
contract = ["num_enum", "strum", "strum_macros", "crypto-standard", "serde-support"]
ledger = ["crypto-standard"]
nightly = []
tokio-support = ["tokio"]
transaction = ["crypto-standard", "contract"]
neo-fs = ["crypto-standard", "contract", "utils", "transaction"]
neo-utils = ["utils", "crypto-standard"]
wallet = ["crypto-standard", "transaction", "tokio-support"]

# Compatibility features
hashable-for-vec = ["crypto-standard"]
string-ext = ["utils"]
getset-macros = ["getset"]

# AWS Nitro TEE support
aws-nitro-tee = ["crypto-standard", "utils"]

# Example-specific features
examples = ["neo-fs", "neo-utils", "transaction", "tokio-support", "contract", "wallet"]

[dev-dependencies]
hex-literal = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }         