[package]
name = "neo3"
version = "0.1.9"
edition = "2021"
authors = ["R3E Network <contact@r3e.network> (c) 2020-2025"]
license = "MIT OR Apache-2.0"
description = "Rust SDK for Neo N3"
documentation = "https://docs.rs/neo3"
repository = "https://github.com/R3E-Network/NeoRust"
homepage = "https://github.com/R3E-Network/NeoRust"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "api-bindings", "cryptography"]
keywords = ["crypto", "neo", "neo-N3", "web3", "blockchain"]
exclude = [
    ".github/",
    "bin/",
    "book/",
    "**/tests/",
    "**/test-data/",
    "**/testdata/",
    "scripts/",
    "docs/book/",
]

[lib]
doctest = false

# https://docs.rs/about/metadata
[metadata.docs.rs]
all-features = false
features = ["futures", "ledger", "aws"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"

# https://github.com/integer32llc/rust-playground/blob/c6165a36923db5d99313e6056b5b610a2ede5bb0/top-crates/src/lib.rs#L175-L184
[metadata.playground]
all-features = true

[dependencies]
# Internal crates
neo-builder = { path = "crates/neo-builder", version = "0.1.9" }
neo-clients = { path = "crates/neo-clients", version = "0.1.9" }
neo-codec = { path = "crates/neo-codec", version = "0.1.9" }
neo-config = { path = "crates/neo-config", version = "0.1.9" }
neo-contract = { path = "crates/neo-contract", version = "0.1.9" }
neo-crypto = { path = "crates/neo-crypto", version = "0.1.9" }
neo-error = { path = "crates/neo-error", version = "0.1.9" }
neo-fs = { path = "crates/neo-fs", version = "0.1.9" }
neo-protocol = { path = "crates/neo-protocol", version = "0.1.9" }
neo-types = { path = "crates/neo-types", version = "0.1.9" }
neo-utils = { path = "crates/neo-utils", version = "0.1.9" }
neo-wallets = { path = "crates/neo-wallets", version = "0.1.9" }
neo-x = { path = "crates/neo-x", version = "0.1.9" }

# Core dependencies
tokio = { version = "1.32", features = ["full"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
url = { version = "2.4", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Common external types
primitive-types = "0.13.0"

[dev-dependencies]
mockall = "0.13.0"
tracing = "0.1"
tracing-subscriber = "0.3.18"

[features]
futures = []
ledger = ["neo-wallets/yubi"]
aws = []
default = []

[workspace]
members = [
    "crates/neo-builder",
    "crates/neo-clients",
    "crates/neo-codec",
    "crates/neo-config",
    "crates/neo-contract",
    "crates/neo-crypto",
    "crates/neo-error",
    "crates/neo-fs",
    "crates/neo-protocol",
    "crates/neo-types",
    "crates/neo-utils",
    "crates/neo-wallets",
    "crates/neo-x",
    "neo-cli",
    "examples/neo_contracts",
    "examples/subscriptions",
    "examples/neo_transactions",
    "examples/transactions",
    "examples/neo_smart_contracts",
    "examples/wallets",
    "examples/neo_fs",
    "examples/events",
    "examples/big-numbers",
    "examples/neo_x",
    "examples/neo_nodes",
    "examples/neo_nns",
    "examples/middleware",
    "examples/contracts",
    "examples/providers",
    "examples/neo_famous_contracts",
    "examples/neo_nep17_tokens",
    "examples/queries",
    "examples/neo_wallets"
]
resolver = "2"

[workspace.package]
version = "0.1.9"
edition = "2021"
authors = ["R3E Network <contact@r3e.network> (c) 2020-2025"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/R3E-Network/NeoRust"
homepage = "https://github.com/R3E-Network/NeoRust"
categories = ["cryptography::cryptocurrencies", "api-bindings", "cryptography"]
keywords = ["crypto", "neo", "neo-N3", "web3", "blockchain"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
futures-core = "0.3.28"
futures-util = "0.3.28"
futures-executor = "0.3.28"
futures-channel = "0.3.28"
futures-locks = { version = "0.7.1", default-features = false }
futures-timer = { version = "3.0.2", default-features = false, features = ["wasm-bindgen"] }
pin-project = "1.1"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "blocking"] }
url = { version = "2.4", default-features = false }
wiremock = "0.6"

# Crypto
elliptic-curve = { version = "0.13.5", default-features = false }
generic-array = { version = "0.14.7", default-features = false }
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa", "std"] }
sha2 = { version = "0.10.7", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false }
spki = { version = "0.7.2", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.3.0"
serde_derive = "1.0.188"
serde_bytes = "0.11.12"
serde-big-array = "0.5.1"

# Macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
async-trait = "0.1.73"
auto_impl = "1.1"

# Misc
bytes = "1.4"
criterion = "0.5"
dunce = "1.0"
eyre = "0.6"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
hex-literal = "0.4"
home = "0.5.5"
once_cell = "1.18"
rand = "0.8"
rayon = "1.7"
regex = "1.9"
semver = "1.0"
tempfile = "3.8"
thiserror = "1.0"
toml = "0.8"
walkdir = "2.3"

# Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "std"] }
tracing-futures = "0.2.5"

# Data structures
bitvec = "1.0"
p256 = "0.13.2"
num-bigint = "0.4"
byte-slice-cast = "1.2"
primitive-types = "0.13.0"
rust-crypto = "0.2"
lazy_static = "1.4.0"
num-traits = "0.2.16"
chrono = { version = "0.4.31", features = ["serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
num_enum = "0.7.0"
derive_more = { version = "1.0.0", features = ["full"] }
indexmap = "2.0.0"
getset = "0.1.2"
educe = "0.6.0"
byteorder = "1.4.3"
blake2 = { version = "0.10.6", default-features = false }
ethereum-types = "0.15.0"
rustc-serialize = "0.3.24"
scrypt = "0.11.0"
rust_decimal_macros = "1.33"
open-fastrlp = { version = "0.1.4", features = ["std", "derive", "ethereum-types"] }
rlp = { version = "0.6.1", features = ["derive"] }
typenum = "1.14"
signature = "2.1.0"
rand_core = "0.6.4"
num-integer = "0.1.45"
log = "0.4.14"
ecb = "0.1.2"
cipher = { version = "0.4.4", features = [] }
http = "1.1.0"
jsonwebtoken = "9.2.0"
uint = { git = "https://github.com/paritytech/parity-common", package = "uint", version = "0.10.0", default-features = false }
impl-codec = { version = "0.6", default-features = false }
impl-serde = { version = "0.5.0", default-features = false }
scale-info = { version = ">=1.0, <3", features = ["derive"], default-features = false }
ring = { version = "0.17.8", features = [] }
base64 = "0.22.1"
bs58 = "0.5.1"
aes = "0.8.3"
block-modes = "0.9.1"
sha3 = "0.10.8"
json = "0.12"
rust_decimal = "1.0"
ripemd = "0.1.3"
block-padding = "0.3.3"
env_logger = "^0.11.3"
async-stream = "0.3.5"
bip39 = { version = "2.1.0", features = ["rand"] }

# Feature-gated dependencies
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_kms = { version = "0.48.0", default-features = false }
coins-ledger = { version = "0.12.0", default-features = false }
protobuf = { version = "=3.2.0" }
yubihsm = { version = "0.42", features = ["mockhsm", "http", "usb"] }

# WASM support
instant = "0.1.12"
