[package]
name = "neo-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the NeoRust SDK"
authors = ["R3E Network"]
license = "MIT"

[dependencies]
neo3 = { path = ".." }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.11"
colored = "3.0.0"
dialoguer = "0.11.0"
indicatif = "0.17"
config = "0.15.8"
dirs = "6.0.0"
log = "0.4"
env_logger = "^0.11.3"
hex = "0.4"
