[package]
name = "neo-cli"
version = "0.1.5"
edition = "2021"
description = "Command-line interface for the NeoRust SDK"
authors = ["R3E Network"]
license = "MIT"

[[bin]]
name = "neo-cli"
path = "src/main.rs"

[features]
default = ["network", "fs", "storage", "files", "neofs"]
network = []
fs = []
storage = []
files = []
neofs = []

[dependencies]
neo3 = { path = "..", version = "0.1.5" }
clap = { version = "4.4.18", features = ["derive", "env", "unicode", "wrap_help"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = "1.0.195"
serde_json = "1.0.114"
serde_derive = "1.0.195"
anyhow = "1.0.79"
thiserror = "1.0.56"
lazy_static = "1.4.0"
comfy-table = "7.1.0"
prettytable-rs = "0.10.0"
confy = "0.5.1"
dirs = "5.0.1"
toml = "0.8.8"
reqwest = { version = "0.11.22", features = ["json"] }
num-bigint = "0.4.4"
num-traits = "0.2.17"
futures = "0.3.30"
chrono = "0.4.31"
base64 = "0.21.5"
rand = "0.8.5"
colored = "2.0.4"
dialoguer = "0.11.0"
hex = "0.4.3"
primitive-types = "0.13.0"
env_logger = "0.10.1"
sha2 = "0.10.8"
ripemd = "0.1.3"
mime_guess = "2.0.4"
async-trait = "0.1.77"

[dev-dependencies]
tempfile = "3.10.0"
regex = "1.10.5"
assert_cmd = "2.0.13"
predicates = "3.1.0"
