[package]
name = "neo-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transaction and script building utilities for the NeoRust SDK"
documentation = "https://docs.rs/neo-builder"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
neo-common = { path = "../neo-common", version = "0.1.9" }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = { version = "0.25.0" }
num_enum = { version = "0.7.2" }
serde_derive = { version = "1.0.204" }
num-traits = { version = "0.2.18" }
rustc-serialize = { version = "0.3.24" }
lazy_static = { version = "1.4.0" }
tracing-subscriber = { version = "0.3.18" }
num-bigint = { version = "0.4.4" }
p256 = { version = "0.13.2", features = ["pkcs8"] }
# Internal crates
neo-crypto = { path = "../neo-crypto", version = "0.1.9" }
neo-types = { path = "../neo-types", version = "0.1.9" }
neo-protocol = { path = "../neo-protocol", version = "0.1.9", optional = true }
neo-codec = { path = "../neo-codec", version = "0.1.9" }
neo-error = { path = "../neo-error", version = "0.1.9" }
neo-utils = { path = "../neo-utils", version = "0.1.9" }
neo-config = { path = "../neo-config", version = "0.1.9" }
# Additional dependencies needed
futures-util = { version = "0.3.30" }
once_cell = { version = "0.2.4" }
ethereum-types = { version = "0.14.1" }
elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
serde_with = { version = "3.6.1" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Crypto
hex = { workspace = true }
sha2 = { workspace = true }

# Attributes
getset = "0.1.2"
base64 = { version = "0.21.7" }

# Misc
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
primitive-types = { workspace = true }
log = { workspace = true }


[features]
futures = []
default = ["protocol"]
protocol = ["neo-protocol"]
