[package]
name = "neo-codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Serialization and deserialization utilities for Neo N3 blockchain data"
documentation = "https://docs.rs/neo-codec"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal crates
neo-error = { path = "../neo-error", version = "0.1.9" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = { version = "1.0.188" }
serde_bytes = { version = "0.11.12" }

# Binary encoding/decoding
bytes = { version = "1.4" }
byteorder = { version = "1.4.3" }
hex = { package = "const-hex", version = "1.6", features = ["hex"] }

# Misc
thiserror = { version = "1.0" }
tracing = { version = "0.1.37" }
primitive-types = { version = "0.13.0" }
num-bigint = { version = "0.4" }
num-traits = { version = "0.2.16" }
num_enum = { version = "0.7.0" }
getset = { version = "0.1.2" }
