[package]
name = "neo-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cryptographic utilities for the NeoRust SDK"
documentation = "https://docs.rs/neo-crypto"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal crates
neo-error = { path = "../neo-error", version = "0.1.9" }
neo-config = { path = "../neo-config", version = "0.1.9" }
neo-common = { path = "../neo-common", version = "0.1.9" }

# Cryptography
p256 = { version = "0.13.2" }
sha2 = { version = "0.10.7", default-features = false }
sha3 = { version = "0.10.8" }
ripemd = { version = "0.1.3" }
hmac = { version = "0.12.1" }
aes = { version = "0.8.3" }
base64 = { version = "0.22.1" }
rand = { version = "0.8" }
rand_core = { version = "0.6.4" }
bs58 = { version = "0.5.1" }
scrypt = { version = "0.11.0" }
pbkdf2 = { version = "0.12.2" }
elliptic-curve = { version = "0.13.8" }
signature = { version = "2.2.0" }
rustc-serialize = { version = "0.3.24" }
hex-literal = { version = "0.4.1" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Misc
thiserror = { workspace = true }
tracing = { workspace = true }
primitive-types = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }

[features]
default = []
with-common = []
