[package]
name = "neo-error"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Error types and handling for the NeoRust SDK"
documentation = "https://docs.rs/neo-error"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
# HTTP requests
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Error handling
thiserror = { version = "1.0" }
anyhow = { version = "1.0", optional = true }

# Misc
tracing = { version = "0.1.37" }
hex = { package = "const-hex", version = "1.12.0", features = ["hex"] }
url = { version = "2.4", default-features = false }
num_enum = { version = "0.7.0" }
p256 = { version = "0.13.2" }

[features]
default = []
with-anyhow = ["anyhow"]
