[package]
name = "neo-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NeoFS integration for the NeoRust SDK"
documentation = "https://docs.rs/neo-fs"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal crates
neo-error = { path = "../neo-error", version = "0.1.9" }
neo-types = { path = "../neo-types", version = "0.1.9" }
neo-clients = { path = "../neo-clients", version = "0.1.9" }
neo-crypto = { path = "../neo-crypto", version = "0.1.9" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Misc
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
primitive-types = { workspace = true }
