[package]
name = "neo-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Neo blockchain protocol implementation for the NeoRust SDK"
documentation = "https://docs.rs/neo-protocol"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal crates
neo-error = { path = "../neo-error", version = "0.1.9" }
neo-types = { path = "../neo-types", version = "0.1.9" }
neo-crypto = { path = "../neo-crypto", version = "0.1.9" }
neo-codec = { path = "../neo-codec", version = "0.1.9" }
neo-config = { path = "../neo-config", version = "0.1.9" }
neo-common = { path = "../neo-common", version = "0.1.9" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rustc-serialize = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Crypto
aes = { version = "0.8.3" }

# Enums
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = { version = "0.26.3" }
block-modes = { version = "0.9.1" }
scrypt = { version = "0.11.0" }
bs58 = { version = "0.5.1" }
sha2 = { version = "0.10.7" }

# Misc
thiserror = { workspace = true }
tracing = { workspace = true }
primitive-types = { workspace = true }
getset = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
num_enum = { version = "0.7.2" }
futures-util = { version = "0.3.30" }
signature = { version = "2.2.0" }
serde_derive = { version = "1.0.197" }
serde_with = { workspace = true }

[features]
default = []
