[package]
name = "neo-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Types for the NeoRust SDK"
documentation = "https://docs.rs/neo-types"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
# Internal crates
neo-crypto = { path = "../neo-crypto", version = "0.1.9" }
neo-error = { path = "../neo-error", version = "0.1.9" }
neo-codec = { path = "../neo-codec", version = "0.1.9" }
neo-config = { path = "../neo-config", version = "0.1.9" }
neo-common = { path = "../neo-common", version = "0.1.9" }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { version = "3.3.0" }
serde_derive = { version = "1.0.188" }
hex = { workspace = true }
base64 = { version = "0.22.1" }

# Crypto
p256 = { workspace = true }
primitive-types = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
bs58 = { workspace = true }

# Misc
thiserror = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
rustc-serialize = { workspace = true }
getset = { workspace = true }
derive_more = { version = "1.0.0", features = ["full"] }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
uuid = { version = "1.6.1", features = ["v4"] }
paste = { version = "1.0.14" }
bytes = { workspace = true }
byte-slice-cast = { workspace = true }
num_enum = { version = "0.7.0" }
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.32.0", features = ["fs", "io-util", "time", "sync", "rt"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }

[features]
default = []
substrate = []
